alterado background toolbar

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -18,6 +18,9 @@
     border-color: #b2b2b2;
     background: #329932;
 }
+.toolbar-md-primary .toolbar-background-md {
+    background: #329932;
+}
 .toolbar-title-md {
     padding: 0 12px;
     font-size: 2rem;
